[package]
name = "transcription-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]] 
name = "transcribe_and_summarize"
path = "bin/transcribe_and_summarize.rs"


[dependencies]
clap = { version =  "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
dotenv = "0.15.0"
espionox = "0.1.42"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
# fastembed = "4.1.0"
# linfa = "0.7.0"
# linfa-clustering = "0.7.0"
# ratatui = "0.29.0"

# linfa-datasets = { version = "0.7.0", features = [ "generate" ] }
# linfa-nn = { version = "0.7.0" }
# ndarray = { version = "0.15", features = ["rayon", "approx"] }
# ndarray-npy = { version = "0.8", default-features = false }
# ndarray-rand = "0.14"

# rand_xoshiro = "0.6"
